[project]
name = "boomchainsh"
version = "0.5.0"
description = "BoomchainSH - Plugin-ready CLI shell for Web3 Loyalty Ops"
authors = [{name = "BoomchainLab", email = "support@boomchainlab.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
boomchainsh = "boomchainsh.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
